--- a/src/components/Header/Navigation/DesktopNav/DesktopNav.module.css
+++ b/src/components/Header/Navigation/DesktopNav/DesktopNav.module.css
@@ -10,6 +10,12 @@
   gap: 15px;
 }
 
+.nav_group_large {
+  display: flex;
+  align-items: center;
+  gap: 30px;
+}
+
 .nav_icon {
   cursor: pointer;
   transition: color 300ms ease;
@@ -20,5 +26,7 @@
 }
 
 .nav_text {
-  font-size: 20px;
+  margin-top: 0.05em;
+  letter-spacing: -0.02em;
+  font-size: 18px;
 }
