--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,6 +1,3 @@
-@import "normalize.css";
-@import url("https://fonts.googleapis.com/css?family=Roboto:400,400i,700,700i&display=swap");
-
-:root {
-  font-family: "Roboto", sans-serif;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
